--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center justify-content-center align-self-center">
-          <h1>This is title or o phrase related to the product</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, temporibus delectus doloremque, est quisquam tempora quod quam ipsum ipsam voluptatum iste odio neque optio sequi harum quasi quibusdam magni natus.
-          Ullam repellendus sit odit sed est magni iure obcaecati, distinctio reiciendis ipsa quasi magnam pariatur adipisci earum cumque a aliquam laborum aliquid. Suscipit totam nobis hic voluptatum eaque, libero et!
-          Nostrum harum molestiae provident nam impedit culpa quasi quis id nihil! Ullam rem debitis assumenda nulla eum atque quisquam reprehenderit dolorem architecto! At suscipit rem fugit fugiat architecto soluta iste! 
+          <h1 class="text-secondary">Disfruta de tus tapizados sin preocuparte</h1>
+          <p>No sufras por el cuidado excesivo de tus tapizados! Pipicucu está para cuidarlos por vos. <br>
+            Somos una empresa que cuenta con un equipo de profesionales que se encargaran dejar tus tapizados
+            como nuevos. <br>Lo unico que tenes que hacer es, relajarte y mandarnos un mensaje para coordinar una visita
+            
           </p>
-          <a href="#" class="btn btn-outline-secondary btn-lg text-white">
-            Seguir leyendo
+          <a href="./pages/contacto.html" class="btn btn-outline-secondary btn-lg text-white">
+            Contactanos
           </a>
         </div>        
       </div>
