--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -48,7 +48,7 @@
     <section>
         <div class="container w-50 m-auto text-center" id="equipo">
             <h1 class="mb-5 fs-2">Equipo pequeño con <span class="text-primary">resultados Grandes</span>.</h1>
-            <p class="fs-4 ">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo para este reto, te esperamos para que te unas a nosotros.</p>
+            <p class="fs-4 ">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sentis listo para este reto, te esperamos para que te unas a nosotros.</p>
         </div>    
         <div class="text-center">
             <img src="../img/martin.jpeg" class="rounded float-start  img-fluid w-50 h-50" alt="foto">
