--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -55,7 +55,7 @@
           <img src="../img/auto.jpg" class="card-img-top" alt="autos">
           <div class="card-body">
             <h5 class="card-title ">Tapizados de autos</h5>
-            <p class="card-text">Lorem ipsum dolor sit,ernatur voluptates nam voluptate dolores accusamus, tempora culpa, officia exercitationem veniam harum. Ipsam recusandae quod itaque cupiditate impedit eius.</p>
+            <p class="card-text">En épocas de coronavirus, la higiene cobró un rol fundamental y más cuando se trata de espacios que solemos habitar con frecuencia como nuestros vehículos, donde podemos pasar varias horas a la semana movilizándonos de un lado a otro. Además, limpiar el tapizado del auto es fundamental para extender su vida útil y mantener la calidad de todos sus componentes.</p>
             <a href="galeria.html" class="btn btn-primary">Ver trabajos</a>
           </div>
         </div>
@@ -65,7 +65,8 @@
           <img src="../img/sillones.jpg" class="card-img-top" alt="sillon">
           <div class="card-body">
             <h5 class="card-title">Limpieza de Sillones</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic consequuntur arcsllendus atque et ullam. Expedita reprehenderit praesentium consectetur in porro totam numquam quia iste!</p>
+            <p class="card-text">
+              Aunque muchas veces no parezca, los sillones y sillas acumulan una gran cantidad de suciedad en nuestros hogares y oficinas. Esto se debe a que son el receptáculo de variados microorganismos y partículas que conviven diariamente en nuestra ropa y que desparramamos a la hora de sentarnos o acostarnos sobre ellos. </p>
             <a href="contacto.html" class="btn btn-primary">Quiero más info</a>
           </div>
         </div>
@@ -75,7 +76,7 @@
           <img src="../img/bebe.jpg" class="card-img-top" width="50px " alt="maquina">
           <div class="card-body">
             <h5 class="card-title">Limpieza de articulos de bebes</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores excepturi id quis doloremque culpa tenetur, quod quam repudiandae aliquid natus error vero qui odi</p>
+            <p class="card-text">Los bebés y niños pasan horas sentados o acostados en sus sillitas para viajes y aun así muchas veces no nos aseguramos de lavarlas correctamente. Pero mantener una higiene frecuente de sus tapizados es fundamental debido a que están en contacto permanente con los más pequeños y acumulan una gran cantidad de manchas, ya sea por sus fluidos, como por comidas y bebidas que se derraman sobre ellas y hasta por la suciedad de sus zapatos.</p>
             <a href="contacto.html" class="btn btn-primary">Quiero más info</a>
           </div>
         </div>
