--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -52,32 +53,32 @@
     <div class="row rowCards">
       <div class="col-md-4 mb-3">
         <div class="card border-danger bg-secondary text-light mb-5 h-100">
-          <img src="../img/auto.jpg" class="card-img-top" alt="autos">
+          <img src="../img/auto.jpg" id="foto_auto" class="card-img-top" alt="autos">
           <div class="card-body">
             <h5 class="card-title ">Tapizados de autos</h5>
             <p class="card-text">En épocas de coronavirus, la higiene cobró un rol fundamental y más cuando se trata de espacios que solemos habitar con frecuencia como nuestros vehículos, donde podemos pasar varias horas a la semana movilizándonos de un lado a otro. Además, limpiar el tapizado del auto es fundamental para extender su vida útil y mantener la calidad de todos sus componentes.</p>
-            <a href="galeria.html" class="btn btn-primary">Ver trabajos</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <div class="card border-primary bg-light text-secondary mb-5 h-100">
-          <img src="../img/sillones.jpg" class="card-img-top" alt="sillon">
-          <div class="card-body">
-            <h5 class="card-title">Limpieza de Sillones</h5>
-            <p class="card-text">
-              Aunque muchas veces no parezca, los sillones y sillas acumulan una gran cantidad de suciedad en nuestros hogares y oficinas. Esto se debe a que son el receptáculo de variados microorganismos y partículas que conviven diariamente en nuestra ropa y que desparramamos a la hora de sentarnos o acostarnos sobre ellos. </p>
-            <a href="contacto.html" class="btn btn-primary">Quiero más info</a>
+            <a href="galeria.html" class="btn-ss ">Ver trabajos</a>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-3">
         <div class="card  border-danger bg-secondary text-light mb-5 h-100">
-          <img src="../img/bebe.jpg" class="card-img-top" width="50px " alt="maquina">
+          <img src="../img/sillones.jpg" class="card-img-top" alt="sillon">
+          <div class="card-body">
+            <h5 class="card-title">Limpieza de Sillones</h5>
+            <p class="card-text">
+              Aunque muchas veces no parezca, los sillones y sillas acumulan una gran cantidad de suciedad en nuestros hogares y oficinas. Esto se debe a que son el receptáculo de variados microorganismos y partículas que conviven diariamente en nuestra ropa y que desparramamos a la hora de sentarnos o acostarnos sobre ellos. </p>
+            <a href="contacto.html" class="btn-ss ">Quiero más info</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card  border-danger bg-secondary text-light mb-5 h-100">
+          <img src="../img/bebe.jpg" class="card-img-top" width="50px " alt="bebe">
           <div class="card-body">
             <h5 class="card-title">Limpieza de articulos de bebes</h5>
             <p class="card-text">Los bebés y niños pasan horas sentados o acostados en sus sillitas para viajes y aun así muchas veces no nos aseguramos de lavarlas correctamente. Pero mantener una higiene frecuente de sus tapizados es fundamental debido a que están en contacto permanente con los más pequeños y acumulan una gran cantidad de manchas, ya sea por sus fluidos, como por comidas y bebidas que se derraman sobre ellas y hasta por la suciedad de sus zapatos.</p>
-            <a href="contacto.html" class="btn btn-primary">Quiero más info</a>
+            <a href="contacto.html" class="btn-ss ">Quiero más info</a>
           </div>
         </div>
       </div>
@@ -87,7 +88,7 @@
   
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
     <p class="fs-5 px-3  pt-3">Pipicucu &copy; Todos Los Derechos Reservados 2022</p>
-    <div id="iconos" >
+    <div>
         <a href="https://www.facebook.com/pipicuculimpieza/" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/pipicucu_limpieza/" target="_blank"><i class="bi bi-instagram"></i></a>  
     </div>
