--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
    </main>       
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
   <p class="fs-5 px-3  pt-3">Pipicucu &copy; Todos Los Derechos Reservados 2022</p>
-  <div id="iconos" >
+  <div>
       <a href="https://www.facebook.com/pipicuculimpieza/" target="_blank"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/pipicucu_limpieza/" target="_blank"><i class="bi bi-instagram"></i></a>  
   </div>
