--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -89,7 +90,7 @@
 </main>
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
   <p class="fs-5 px-3  pt-3">Pipicucu &copy; Todos Los Derechos Reservados 2022</p>
-  <div id="iconos" >
+  <div>
       <a href="https://www.facebook.com/pipicuculimpieza/" target="_blank"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/pipicucu_limpieza/" target="_blank"><i class="bi bi-instagram"></i></a>  
   </div>
