--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -54,7 +55,6 @@
             <img src="../img/martin.jpeg" class="rounded float-start  img-fluid w-50 h-50" alt="foto">
         </div>    
         <div id="local" class="border-top border-2">
-            <div class="mapa"> </div>
             <div>
                 <div class="wrapper-local P-2">
                     <h2 class="text-center">Nuestro punto de partida fue en la ciudad de Rosario</h2>
@@ -62,7 +62,7 @@
                 </div>
                     <section >
                         <section class="d-flex justify-content-start s-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d720176.5939768923!2d-61.096398097435724!3d-33.01786849385739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6539335d7d75b%3A0xec4086e90258a557!2sRosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1672177942762!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d720176.5939768923!2d-61.096398097435724!3d-33.01786849385739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6539335d7d75b%3A0xec4086e90258a557!2sRosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1672177942762!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <p class="fs-5 text-body text-center ">Nos especializamos en limpieza tapizados de autos, sillas, sillones, alfombras, colchones y sillitas de bebé. 
                                 Contamos con encargados en distintos puntos del país: Rosario, Buenos Aires, Córdoba, Santa Fe, San Jorge, Misiones, Tucumán, Rafaela y Mar del Plata.</p>
                         </section>                        
@@ -73,7 +73,7 @@
 </main>
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
     <p class="fs-5 px-3  pt-3">Pipicucu &copy; Todos Los Derechos Reservados 2022</p>
-    <div id="iconos" >
+    <div>
         <a href="https://www.facebook.com/pipicuculimpieza/" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/pipicucu_limpieza/" target="_blank"><i class="bi bi-instagram"></i></a>  
     </div>
